--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://khusburai28.github.io/Trendy-Infowave",
   "eslintConfig": {
     "extends": "react-app"
   },
